# MLOps_Course_Project

./: .dockerignore  .gitignore  Dockerfile  README.md  README_VIS.md  entrypoint.sh  main.py  makefile  mkdocs.yml  pyproject.toml  pytest.ini
.dvc/: config
data/processed/: features.csv.dvc  features_drifted.csv.dvc  online_news_modified_engineered_processed_20251010.csv.dvc
data/raw/: online_news_modified.csv.dvc  online_news_original.csv.dvc
docs/: example.md  index.md  mkdocs.yml  rest_api_docs.md  testing_guide.md
documentation/: __init__.py  notebook_documenter.py
evaluation/: __init__.py  compare_models.py
models/: 01_data_engineering_metadata_JLRL.json  01_data_engineering_pipeline_JLRL.joblib  01_xgb_CDC.pkl  01_xgb_CDC.pkl.dvc
models/model_20251031_194317.pkl/: MLmodel  conda.yaml  model.pkl
models/model_20251031_194902.pkl/: MLmodel
models/rf_model_20251114_181516/: MLmodel  serving_input_example.json
models/rf_model_20251114_182014/: MLmodel  input_example.json  requirements.txt
models/rf_model_20251114_184320/: MLmodel
notebooks/: 01_XGEBOOST_CDC.ipynb  0_example_jv.ipynb  1_Análisis_y_Tratamiento_DE.ipynb  2_RandomForest_DS.ipynb  5_Drift_Data.ipynb
reports/inference/: inference_features_20251102_215926.csv
reports/metrics/: metrics.json  rf_online_news_modified_engineered_20251010_01.json  xgb_online_news_modified_engineered_20251010_01.json
src/: features.py  main.py  rest_api.py
src/modeling/: predict.py  train.py  train_sample.py
src/test/: README.md  RESUMEN_PRUEBAS.md  __init__.py  conftest.py  test_compare_models.py  test_config.py  test_evaluation.py  test_features.py  test_integration.py  test_main.py  test_modeling.py  test_notebook_documenter.py  (+3 more)
visualization/: __init__.py  plot_results.py
