[project]
name = "mlops-course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[all,dropbox,gdrive]>=3.63.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xgboost>=3.0.5",
]
