[project]
name = "mlops-course-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dvc[all,dropbox,gdrive]>=3.63.0",
    "fastapi>=0.104.0",
    "httpx>=0.25.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "mlflow>=3.5.1",
    "notebook>=7.4.7",
    "pandas>=2.3.2",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "python-multipart>=0.0.6",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.24.0",
    "xgboost>=3.0.5",
]
